--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,19 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
+build
 /captures
 .externalNativeBuild
-.cxx
-local.properties
+.idea
+.kotlintest
+run.sh
+*.idea
+*.lock
+*.apk
+*.aab
+output-metadata.json
+/fastlane/README.md
+/fastlane/report.xml
+/build.properties
+gradle.properties
+*.hprof
